# circumspect

./: .gitignore  .gitmodules  Bender.yml  Cargo.toml  README.md  book.toml  pyproject.toml
.github/actions/setup-verilator/: action.yml
.github/workflows/: ci.yml
cspect/: Cargo.toml  build.rs  cbindgen.toml  svdpi.h
cspect-cli/: Cargo.toml
cspect-cli/src/: main.rs  open.rs  utils.rs
cspect-cli/src/annotate/: addr2line.rs  disasm.rs  mod.rs
cspect-cli/src/cli/: cmd_annotate.rs  cmd_completion.rs  cmd_open.rs  cmd_serve.rs  mod.rs
cspect/src/: dpi.rs  lib.rs  svdpi.rs
docs/: SUMMARY.md  examples_missing.md
docs/theme/: highlight.js
examples/: .gitignore  common_verilator_top.cc  examples_to_mdbook.py  run.py
examples/annotations/: annotate.bash  example.toml  top.sv
examples/annotations/annotations_elf/: build.bash
examples/correlation/: example.toml  top.sv
examples/counters/: example.toml  top.sv
examples/cpu/: example.toml  top.sv
examples/flows/: example.toml  top.sv
examples/process_and_threads/: example.toml  top.sv
examples/simple/: example.toml  top.sv
examples/slices/: example.toml  top.sv
include/: cspect_dpi.svh  cspect_macros.svh  cspect_pkg.sv
scripts/: format_all.bash  run_all_tests.bash  verible_format.bash
synthetto/: Cargo.toml
synthetto/src/: lib.rs  perfetto_trace_minimal.proto
test/: test.bash
test/dpihdr_match/: main.c  test.bash
test/example_integration/: check_annotations.py  check_counters.py  check_flows.py  check_simple.py  test.bash
test/example_integration/annotations_elf/: README.md  crt0.S  link.ld  program.c
