[package]
name = "cspect"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
synthetto = { path = "../synthetto" }

[build-dependencies]
bindgen = "0.72.0"
cbindgen = { version = "0.29.0" }
