[package]
name = "cspect"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
synthetto = { path = "../synthetto" }

[build-dependencies]
cbindgen = { version = "0.29.0" }
